fix(app): border line on dark mode

--- a/week_3/dictionary-app/css/_variables.scss
+++ b/week_3/dictionary-app/css/_variables.scss
@@ -18,6 +18,7 @@ $text-secondary: #ffffff;
 $input-bg-color: #f4f4f4;
 $disc-color: #8f19e8;
 $dark-color: #1f1f1f;
+$border-dark-color: #3a3a3a;
 
 // Theme colors
 $light-theme: #ffffff;
